--- a/Chess/MainWindow.xaml
+++ b/Chess/MainWindow.xaml
@@ -1,8 +1,26 @@
-﻿<Window x:Class="Chess.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:local="clr-namespace:Chess" x:Class="Chess.MainWindow"
         Title="Chess" Height="720" Width="1280" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
-    <Grid>
-    	<Grid HorizontalAlignment="Left" Height="600" Margin="253.757,50.676,0,0" VerticalAlignment="Top" Width="800"/>
-    </Grid>
+	<Grid x:Name="Main">
+		<Grid x:Name="boardArea" HorizontalAlignment="Left" Height="600" Margin="337,46" VerticalAlignment="Top" Width="600" Background="Black">
+			<local:WhitePlaceholder Width="75" HorizontalAlignment="Left" Margin="0,150,0,375"/>
+			<local:WhitePlaceholder Width="75" HorizontalAlignment="Left" RenderTransformOrigin="2.638,0.513" Margin="75,75,0,450"/>
+			<local:WhitePlaceholder Width="75" HorizontalAlignment="Left" Margin="0,0,0,525"/>
+			<local:WhitePlaceholder Width="75" HorizontalAlignment="Left" Margin="0,450,0,75"/>
+			<local:WhitePlaceholder Width="75" HorizontalAlignment="Left" Margin="75,375,0,150"/>
+			<local:WhitePlaceholder Width="75" HorizontalAlignment="Left" Margin="0,300,0,225"/>
+			<local:WhitePlaceholder Width="75" HorizontalAlignment="Left" Margin="75,225,0,300"/>
+			<local:WhitePlaceholder Width="75" HorizontalAlignment="Left" Margin="75,525,0,0"/>
+			<local:WhitePlaceholder Width="75" HorizontalAlignment="Left" Margin="0,150,0,375"/>
+			<local:WhitePlaceholder Width="75" HorizontalAlignment="Left" RenderTransformOrigin="2.638,0.513" Margin="75,75,0,450"/>
+			<local:WhitePlaceholder Width="75" HorizontalAlignment="Left" Margin="0,0,0,525"/>
+			<local:WhitePlaceholder Width="75" HorizontalAlignment="Left" Margin="0,450,0,75"/>
+			<local:WhitePlaceholder Width="75" HorizontalAlignment="Left" Margin="75,375,0,150"/>
+			<local:WhitePlaceholder Width="75" HorizontalAlignment="Left" Margin="0,300,0,225"/>
+			<local:WhitePlaceholder Width="75" HorizontalAlignment="Left" Margin="75,225,0,300"/>
+			<local:WhitePlaceholder Width="75" HorizontalAlignment="Left" Margin="75,525,0,0"/>
+		</Grid>
+	</Grid>
 </Window>
