visual changes + bugs

--- a/Chess/Pages/2_P_Game.xaml
+++ b/Chess/Pages/2_P_Game.xaml
@@ -16,11 +16,11 @@
 			<Controls:Chessboard x:Name="Chessboard"/>
 			
 		</Border>
-		<TextBox x:Name="P2_Textbox" HorizontalAlignment="Left" Height="281" Margin="1071,96,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="159" SelectionBrush="{x:Null}" Foreground="Black" BorderBrush="{x:Null}" FontFamily="Century Gothic" FontSize="13.333" IsEnabled="False"/>
-		<TextBox x:Name="P1_Textbox" HorizontalAlignment="Left" Height="281" Margin="41,96,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="159" SelectionBrush="{x:Null}" Foreground="Black" BorderBrush="{x:Null}" FontFamily="Century Gothic" FontSize="13.333" IsEnabled="False"/>
 		<Label Content="Player 1" HorizontalAlignment="Left" Margin="41,46,0,0" VerticalAlignment="Top" Width="159" Foreground="White" FontFamily="Century Gothic" FontSize="18.667"/>
 		<TextBlock HorizontalAlignment="Left" Margin="1071,51,0,0" TextWrapping="Wrap" Text="Player 2" VerticalAlignment="Top" Foreground="White" FontFamily="Century Gothic" FontSize="18.667" TextAlignment="Right" Height="32.887" Width="159"/>
         <Image x:Name="p2_arrow" Visibility="Hidden" gif:ImageBehavior.AnimatedSource="/Chess;component/Images/arrows_right.gif" Width="40" Height="20" Margin="1071,53,163,622" />
         <Image x:Name="p1_arrow" Visibility="Hidden" gif:ImageBehavior.AnimatedSource="/Chess;component/Images/arrows_left.gif" Width="40" Height="20" Margin="160,53,1074,622" />
+        <controls:Player_MessageBox x:Name="p1_messagebox" HorizontalAlignment="Left" Margin="41,78.887,0,0" VerticalAlignment="Top"/>
+        <controls:Player_MessageBox x:Name="p2_messagebox" HorizontalAlignment="Left" Margin="1030,88.887,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Page>
