--- a/Chess/Controls/Menu_Button.xaml
+++ b/Chess/Controls/Menu_Button.xaml
@@ -8,8 +8,8 @@
 	x:Name="UserControl"
 	d:DesignWidth="640" d:DesignHeight="480" Width="300" Height="60">
 
-	<Grid x:Name="LayoutRoot" Width="300" Height="60" Background="#FF778ABA">
+	<Grid x:Name="LayoutRoot" Background="#FF778ABA">
 		<TextBlock x:Name="buttoncontent" HorizontalAlignment="Left" Margin="10,17,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="28" Width="280" FontFamily="Century Gothic" FontSize="21.333" TextAlignment="Center" Foreground="White"/>
-		<Border BorderBrush="#FFB0BDDF" BorderThickness="1,5,1,1" HorizontalAlignment="Left" Height="5.667" Margin="0,54.333,0,0" VerticalAlignment="Top" Width="300"/>
+		<Border BorderBrush="#FFB0BDDF" BorderThickness="1,5,1,1" Height="5.667" Margin="0,54.333,0,0" VerticalAlignment="Bottom"/>
 	</Grid>
 </UserControl>
